--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/email.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/email.css
@@ -91,10 +91,11 @@
     background: none repeat scroll 0 0 transparent;
     border: 0 none;
     color: #666666;
-    font-size: 150%;
+    font-size: 103%;
     margin: 0;
     padding: 0;
     width: 75%;
+    font-weight: bold;
 }
 #email-contact .contact-table
 {
@@ -109,7 +110,7 @@
 }
 #email-contact .button.primary
 {
-    height: 19px;
+    height: 11px;
     
 }
 #email-contact .items .item .chbox-label
