--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/email.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/email.css
@@ -1,5 +1,6 @@
 
 /* For Email Template Start*/
+/*
 #email-form .text-input {
     background-color: #FFFFFF;
     background-image: -moz-linear-gradient(center top , #C4C4C4 0%, #FEFFFF 30%, #FFFFFF 100%, #FFFFFF 100%, #DDDDDD 100%);
@@ -38,6 +39,8 @@
     
     width: 100%;
 }
+*/
+/*
 #email-component .sections .items
 {
     background:#fff;
@@ -62,6 +65,7 @@
 {
     margin-top:-4px;
 }
+*/
 /* For Email Template End*/
 
 
@@ -146,7 +150,7 @@
     list-style: none outside none;
     margin-bottom:5px;
 }
-.items .item {
+#email-contact .items .item {
 background: white;
 margin: 0 0 1px 0;
 padding: 0em 10px 1em 10px;
