contact us styles fix
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2341 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -4831,3 +4831,9 @@ html.csstransforms3d header.ics404 #search-menu {
 {
     /*z-index: 0 !important;*/
 }
+#email-component .items .item {
+    background: none repeat scroll 0 0 white;
+    margin: 0 0 1px;
+    overflow: hidden;
+    padding: 1em 10px !important;
+}
