--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/email.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/email.css
@@ -107,10 +107,10 @@
 }
 #email-contact .compare-btn.email-btn 
 {
-    margin-left:-85px;
+    /*margin-left:-85px;*/
     position: relative;
     z-idex:999;
-    margin-top:-11px;
+    /*margin-top:-11px;*/
 }
 #email-contact .button.primary
 {
